@@ -88,6 +88,20 @@ faqitem_schema = {
                 'is_searchabletext': 1,
             },
         },
+    'content_position': {
+        'type': 'CPS String Field',
+        'data': {
+                'default_expr': 'string:normal',
+                'is_searchabletext': 1,
+            },
+        },
+    'content_format': {
+        'type': 'CPS String Field',
+        'data': {
+                'default_expr': 'string:text',
+                'is_searchabletext': 1,
+            },
+        },
     }
 
 #########################################################
